Fix the z-index of the buttons in the hero section

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -41,7 +41,7 @@
       }
 
       .buttons {
-        z-index: 999;
+        z-index: 1;
 
         button {
           padding: 15px;
